# omemo-content-factory

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENT_SPEC.md  ARCHITECTURE.md  ARCHITECTURE_FREEZE.md  CLAUDE.md  CONTRIBUTING.md  DOMAIN_MODEL.md  LICENSE  PROJECT.md  PROVIDER_MODEL_ACCEPTANCE.md  PROVIDER_MODEL_SPEC.md  README.md  ROADMAP.md  RUN_ACCEPTANCE.md  RUN_RESTORE_ACCEPTANCE.md  RUN_RESTORE_SPEC.md  RUN_SPEC.md  SCHEMA_ACCEPTANCE.md  SCHEMA_SPEC.md  TASK_ACCEPTANCE.md  TASK_SPEC.md  WORKFLOW_ACCEPTANCE.md  WORKFLOW_SPEC.md  demo.py  pyproject.toml
.github/workflows/: ci.yml
docs/adr/: 0000-adr-template.md  0001-record-architecture-decisions.md  0002-stage-1-tooling-and-project-scaffold.md  0003-run-domain-model-interface-contract.md  0004-task-aggregate-run-task-interface-contract.md  0005-output-entity-interface-contract.md  0006-artifact-entity-interface-contract.md  0007-human-review-and-artifact-publication-path.md  0008-schema-entity-interface-contract.md  0009-workflow-and-workflow-step-declarative-contract.md  0010-agent-boundary-non-execution-contract.md  0011-agent-prompt-binding-layer.md  0012-composition-root-application-wiring-layer.md  0013-execution-topology-contract.md  0014-structured-output-port-and-generation-shape.md  0015-execution-state-recoverability.md  0016-provider-model-selection-ownership.md  README.md
src/omemo_content_factory/: __init__.py  __main__.py  composition.py  config.py  log.py
src/omemo_content_factory/agents/: __init__.py  content_researcher.py  script_writer.py
src/omemo_content_factory/application/: __init__.py  content_director.py  publishing.py  schema_observability.py  schema_validation.py  (+1 more)
tests/: test_agent.py  test_artifact.py  test_composition.py  test_config.py  test_content_director.py  test_content_researcher_agent.py  test_fake_llm.py  test_human_review.py  test_llm_executor.py  test_log.py  test_output.py  test_provider_model.py  test_publishing.py  test_run.py  test_schema.py  test_schema_observability.py  test_schema_validation.py  test_script_writer_agent.py  test_smoke.py  test_task.py  test_task_execution.py  test_workflow.py
(+15 files in other folders)
